base/payment/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-microservice
  template:
    metadata:
      labels:
        app: payment-microservice
    spec:
      containers:
        - name: payment-container
          image: nginx:latest
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: paymentVolume
              mountPath: /app
      volumes:
        - name: paymentVolume
          hostPath:
              path: /data/payment
              type: DirectoryOrCreate
