base/payment/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: microservice
spec:
  selector:
    app: payment-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
